Added Markdown Support

--- a/AppContextMaker/AppContextMaker.csproj
+++ b/AppContextMaker/AppContextMaker.csproj
@@ -8,14 +8,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Mono.Cecil" Version="0.11.4" />
+        <PackageReference Include="Mono.Cecil" Version="0.11.4"/>
     </ItemGroup>
 
     <ItemGroup>
-      <None Remove="d2.exe" />
-      <Content Include="d2.exe">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </Content>
+        <None Remove="d2.exe"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\AppExplorer\AppExplorer.csproj"/>
     </ItemGroup>
 
 </Project>
